tentativa tela de registro

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "@angular/common": "^7.2.16",
     "@angular/http": "^7.2.16",
     "nvm": "^0.0.4"
+  },
+  "devDependencies": {
+    "@angular/cli": "19.2.9"
   }
 }
